Add audio description and update video section in index.html

--- a/index.html
+++ b/index.html
@@ -77,17 +77,15 @@
     <div class="media">
       <h3>Áudio de introdução</h3>
       <audio controls>
-        <source src="your-audio.mp3" type="audio/mpeg">
+        <source src="audio-description.ogg" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
 
     <div class="media">
       <h3>Vídeo de apresentação</h3>
-      <video controls>
-        <source src="your-video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+      <p>Este vídeo foi gravado enquanto fazia um intercâmbio em Toronto, Canadá. 🇨🇦</p>
+      <iframe width="100%" height="415" src="https://www.youtube.com/embed/0CT4m1pIqeI?si=SujaOkh6SJADtfZV" title="TLG Canada Testimonial: Gui from Brazil" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
 </body>
